<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cripto calculator</string>
    <string name="cv_no_cripto_sel">No criptocurrency selected</string>
    <string name="right_btn">Right</string>
    <string name="left_btn">Left</string>
    <string name="sel_btn">Select</string>
    <string name="cv_btn">C. V.</string>
    <string name="erase_btn">Erase</string>
    <string name="ce_btn">CE</string>
    <string name="cv_title">Change value of selected cryptocurrency</string>
    <string name="cv_qstn">What is the cryptocurrency value?</string>
    <string name="cv_negative_btn">Cancel</string>
    <string name="cv_positive_btn">Done</string>
    <string name="cv_bad_answer">Write a valid value</string>
    <string name="sel_crip_qstn">With which of this cryprocurrencies will you work with?</string>
    <string name="new_btcn">New cryptocurrency</string>
    <string name="new_btcn_name">New cryptocurrency name:</string>
    <string name="new_btcn_value">New cryptocurrency value:</string>
    <string name="err_name_used">This name is already in use</string>
    <string name="err_name_len">This name is too short</string>
    <string name="err_inv_num">Write a valid number</string>

</resources>